--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo
+
+# DB Verbindung
+
+spring.datasource.url=jdbc:mysql://localhost:3307/video_rental?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=user
+spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
