--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     volumes:
       - db_data:/var/lib/mysql
-     # Auskommentieren um db mit init werten zu starten
-     # - ./init:/docker-entrypoint-initdb.d
+      - ./init:/docker-entrypoint-initdb.d
 
 volumes:
   db_data:
